--- a/test.html
+++ b/test.html
@@ -2,74 +2,34 @@
 <html>
 <head>
 	<meta charset="utf-8">
-  	<title>Hello and welcome to Pie-O-Matic</title>
+  	<title>Pie-O-Matic</title>
   	<link rel="stylesheet" href="piestyle4a.css" type="text/css">
   	<link rel="stylesheet" href="jquery-ui.css" type="text/css">
   	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
   	<script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+    <script src="jquery.ui.touch-punch.min.js"></script>
+    <script src="piescript4a.js"></script>
   	<link href='http://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Michroma' rel='stylesheet' type='text/css'>
-  	<script>
-	  $(function() {
-    	$( "#formfilling" ).buttonset();
-  		});
-  	</script>
-  	<script>
-  	  $(function() {
-  		$( "#formshell" ).buttonset();
-  		});
-	</script>
-	<script>
-  	 $(function() {
-    $( "#slider-range-min" ).slider({
-      range: "min",
-      value: 250,
-      min: 170,
-      max: 500,
-      slide: function( event, ui ) {
-        $( "#slider" ).val( ui.value );
-        $(this).find('.ui-slider-handle').text(ui.value);
-      },
-      create: function(event, ui) {
-            var v=$(this).slider('value');
-            $(this).find('.ui-slider-handle').text(v);
-        	}
-    });
-    $( "#slider" ).val( $( "#slider-range-min" ).slider( "value" ) );
-  });
-  </script> 
-  <script>
-  	$(function(){
-  	  $("#slider-range-max").slider({
-        range: "max",
-        min: 0,
-        max: 60,
-        value: 30,
-        slide: function( event, ui ) {
-            $( "#amount" ).val( ui.value );
-            $(this).find('.ui-slider-handle').text(ui.value);
-        },
-        create: function(event, ui) {
-            var v=$(this).slider('value');
-            $(this).find('.ui-slider-handle').text(v);
-        	}
-    	});    
-	});
-  </script> 
+  	
 </head>
 <body>
+
+  <div id="left_shell_panel">
+  </div>
 	<div id="main">
 
 		<div id="top" class="group">
 			<div id="nameplate">
 				Pie-O-Matic
 			</div><!--end nameplate-->
-			<div id="powerswitch">
-				POWER
+			<div>
+				<button id="powerswitch">POWER</button>
 			</div><!--end powerswitch-->
 		</div><!--end top-->
 
 		<div id="status">
+      <p class="statustext">Hello and welcome! Let's make a pie.</p>
 		</div><!--end status-->
 
 		<div id="options">
@@ -80,8 +40,8 @@
 					<p class="selecttext">Select shell:</p>
 			
 					<div id="formshell">
-						<input type="radio" id="radio1" name="radioS"><label for="radio1">Flaky</label>
-          				<input type="radio" id="radio2" name="radioS"><label for="radio2">Tender</label>
+						<input type="radio" id="radio1" name="radioS" value="flaky"><label for="radio1">Flaky</label>
+          	<input type="radio" id="radio2" name="radioS" value="tender"><label for="radio2">Tender</label>
 					</div><!--end formshell-->
 
 				</div><!--end shell-->
@@ -90,10 +50,10 @@
 					<p class="selecttext">Select filling:</p>
 			
 					<div id="formfilling">
-						<input type="radio" id="radio3" name="radioF"><label for="radio3">Apple</label>
-          				<input type="radio" id="radio4" name="radioF"><label for="radio4">Cherry</label>
-          				<input type="radio" id="radio5" name="radioF"><label for="radio5">Pumpkin</label> 
-	          			<input type="radio" id="radio6" name="radioF"><label for="radio6">Coconut</label>
+						<input type="radio" id="radio3" name="radioF" value="apple"><label for="radio3">Apple</label>
+          	<input type="radio" id="radio4" name="radioF" value="cherry"><label for="radio4">Cherry</label>
+          	<input type="radio" id="radio5" name="radioF" value="pumpkin"><label for="radio5">Pumpkin</label> 
+	          <input type="radio" id="radio6" name="radioF" value="blueberry"><label for="radio6">Blueberry</label>
 					</div><!--end formfilling-->
 
 				</div><!--end filling-->
@@ -103,21 +63,34 @@
 			<div id="temp">
 				<p>
 				<label class="tempslider" for="slider">Select temperature:</label>
-				
 				</p>
 				<div id="slider-range-min"></div>
 			</div><!--end temp-->
 
 			<div id="time"> 
 				<p class="tempslider" for="slider">Select time:</label>
-				<div id="slider-range-max"></div>
-			
+				</p>
+        <div id="slider-range-max"></div>
 			</div>
+
+      <div id="formbake">
+        <input type="radio" id="radio7" name="radioB" value="start"><label for="radio7">BAKE</label>
+        <input type="radio" id="radio8" name="radioB" value="reset"><label for="radio8">RESET</label>
+       <!-- <input type="radio" id="radio9" name="radioB" value="random"><label for="radio9">RANDOM</label> -->
+      </div>
 
 		</div><!--end options-->
 
 		<div id="oven">
+      <img id="ovenopening" src="ovenpie_none.png" alt="oven">
 		</div><!--end oven-->
+
+
 	</div><!--end main-->
+
+  <!-- <div id="right_fill_panel">
+  </div>  -->
+
+
 </body>
 </html>
